Fixed video overlap

--- a/styles.css
+++ b/styles.css
@@ -81,12 +81,21 @@ main {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+
+}
+
+.heroContent {
+    grid-row: 1/ span 2;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .heroPhone {
     position: absolute;
-    margin-left: 42rem;
-    margin-top: -10rem;
+    margin-left: 35rem;
+    margin-top: -30rem;
     transform: scale(0.3) rotate(20deg);
     filter: drop-shadow(0 1rem 2rem var(--black));
     z-index: 5;
@@ -94,8 +103,8 @@ main {
 
 .heroWordmark {
     position: absolute;
-    margin-left: 33rem;
-    margin-top: 3rem;
+    margin-left: 38rem;
+    margin-top: -20rem;
     transform: scale(0.2) rotate(-10deg);
     filter: drop-shadow(0 0 0.5rem var(--black));
     z-index: 5;
@@ -131,10 +140,9 @@ main {
 }
 
 .video {
-    width: 952px;
-    height: 536px;
-    position: absolute;
-    margin: 15rem 0 0 10rem; 
+    width: 850px;
+
+    margin: 14rem 0;
 }
 
 .teamTitle {
